// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model class create 1`] = `
Array [
  Array [
    Object {
      "test": "value",
    },
  ],
]
`;

exports[`Model class findBy 1`] = `
Array [
  Array [
    "column",
    1,
  ],
]
`;

exports[`Model class select 1`] = `
Array [
  Array [
    Array [
      "email",
      "id",
    ],
  ],
]
`;

exports[`Model class updateBy 1`] = `
Array [
  Array [
    Object {
      "column": 2,
    },
    3,
  ],
]
`;

exports[`Model class updateBy with values 1`] = `
Array [
  Array [
    Object {
      "test": 4,
    },
    3,
  ],
]
`;

exports[`Model class where 1`] = `
Array [
  Array [
    "column",
    1,
  ],
]
`;
